--- a/Unity3D/SlotMachine/Assembly-CSharp-Editor-firstpass.csproj
+++ b/Unity3D/SlotMachine/Assembly-CSharp-Editor-firstpass.csproj
@@ -19,7 +19,7 @@
 	<DebugType>full</DebugType>
 	<Optimize>false</Optimize>
 	<OutputPath>Temp\bin\Debug\</OutputPath>
-	<DefineConstants>DEBUG;TRACE;UNITY_5_2_3;UNITY_5_2;UNITY_5;UNITY_64;ENABLE_NEW_BUGREPORTER;ENABLE_2D_PHYSICS;ENABLE_4_6_FEATURES;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_REFLECTION_BUFFERS;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_LOCALIZATION;ENABLE_ANDROID_ATLAS_ETC1_COMPRESSION;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_LOG_MIXED_STACKTRACE;ENABLE_UNITYWEBREQUEST;ENABLE_EVENT_QUEUE;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;UNITY_TEAM_LICENSE;UNITY_PRO_LICENSE;CROSS_PLATFORM_INPUT</DefineConstants>
+	<DefineConstants>DEBUG;TRACE;UNITY_5_2_3;UNITY_5_2;UNITY_5;ENABLE_NEW_BUGREPORTER;ENABLE_2D_PHYSICS;ENABLE_4_6_FEATURES;ENABLE_AUDIO;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_DUCK_TYPING;ENABLE_FRAME_DEBUGGER;ENABLE_GENERICS;ENABLE_HOME_SCREEN;ENABLE_IMAGEEFFECTS;ENABLE_LIGHT_PROBES_LEGACY;ENABLE_MICROPHONE;ENABLE_MULTIPLE_DISPLAYS;ENABLE_PHYSICS;ENABLE_PLUGIN_INSPECTOR;ENABLE_SHADOWS;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_SPRITES;ENABLE_TERRAIN;ENABLE_RAKNET;ENABLE_UNET;ENABLE_UNITYEVENTS;ENABLE_VR;ENABLE_WEBCAM;ENABLE_WWW;ENABLE_CLOUD_SERVICES;ENABLE_CLOUD_SERVICES_ADS;ENABLE_CLOUD_HUB;ENABLE_CLOUD_PROJECT_ID;ENABLE_CLOUD_SERVICES_ANALYTICS;ENABLE_CLOUD_SERVICES_UNET;ENABLE_CLOUD_SERVICES_BUILD;ENABLE_CLOUD_LICENSE;ENABLE_EDITOR_METRICS;ENABLE_REFLECTION_BUFFERS;INCLUDE_DYNAMIC_GI;INCLUDE_GI;INCLUDE_IL2CPP;INCLUDE_DIRECTX12;PLATFORM_SUPPORTS_MONO;RENDER_SOFTWARE_CURSOR;ENABLE_LOCALIZATION;ENABLE_ANDROID_ATLAS_ETC1_COMPRESSION;UNITY_STANDALONE_WIN;UNITY_STANDALONE;ENABLE_SUBSTANCE;ENABLE_TEXTUREID_MAP;ENABLE_RUNTIME_GI;ENABLE_MOVIES;ENABLE_NETWORK;ENABLE_CRUNCH_TEXTURE_COMPRESSION;ENABLE_LOG_MIXED_STACKTRACE;ENABLE_UNITYWEBREQUEST;ENABLE_EVENT_QUEUE;ENABLE_WEBSOCKET_HOST;ENABLE_MONO;ENABLE_PROFILER;UNITY_ASSERTIONS;UNITY_EDITOR;UNITY_EDITOR_64;UNITY_EDITOR_WIN;UNITY_TEAM_LICENSE;UNITY_PRO_LICENSE;CROSS_PLATFORM_INPUT</DefineConstants>
 	<ErrorReport>prompt</ErrorReport>
 	<WarningLevel>4</WarningLevel>
 	<NoWarn>0169</NoWarn>
@@ -78,7 +78,7 @@
      <None Include="Assets\Standard Assets\Effects\Projectors\Guidelines.txt" />
      <None Include="Assets\Plugins\SpriteMask\Readme.txt" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Emission\MK_Emission-Diffuse.shader" />
-     <None Include="Assets\MyAssets\Shaders\MysteriousNIght\VideoMasking.shader" />
+     <None Include="Assets\MyAssets\AdditionalScripts\Shaders\MysteriousNIght\VideoMasking.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKGlowEffect\MKGlowCompose.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKGlowEffect\MKGlowBlur.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\MotionBlur.shader" />
@@ -86,7 +86,7 @@
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Particles\MK_Particles-AdditiveSoft.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Particles\MK_Particles-AdditiveMultiply.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Transparent\MK_Transparent-Diffuse.shader" />
-     <None Include="Assets\MyAssets\Shaders\MysteriousNIght\ShadowReciver.shader" />
+     <None Include="Assets\MyAssets\AdditionalScripts\Shaders\MysteriousNIght\ShadowReciver.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Transparent\MK_Transparent-DiffuseBumpSpec.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\Contrast Stretch\MinMaxReduction.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_Antialiasing\SSAA.shader" />
@@ -95,7 +95,7 @@
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\ContrastComposite.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_Antialiasing\FXAAPreset3.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\FisheyeShader.shader" />
-     <None Include="Assets\MyAssets\Shaders\RatEmpire\VideoMasking.shader" />
+     <None Include="Assets\MyAssets\AdditionalScripts\Shaders\RatEmpire\VideoMasking.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Mobile\MK_Mobile-DiffuseBumped.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\Contrast Stretch\Apply.shader" />
      <None Include="Assets\codeandweb.com\Example\Sprites\spinner_botle_json\spinner_botle.txt" />
@@ -117,12 +117,12 @@
      <None Include="Assets\Standard Assets\ParticleSystems\Shaders\PriorityParticleAlpha.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_DepthOfField\DepthOfField34.shader" />
      <None Include="Assets\Plugins\SpriteMask\Resources\ClearStencil.shader" />
-     <None Include="Assets\MyAssets\Shaders\MysteriousNIght\ShadowReciver01.shader" />
+     <None Include="Assets\MyAssets\AdditionalScripts\Shaders\MysteriousNIght\ShadowReciver01.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Normal\MK_Normal-Glossy.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Lightmapped\MK_Lightmap-Diffuse.shader" />
      <None Include="Assets\codeandweb.com\Editor\SettingsTexturePackerImporter.txt" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Toon\MK_Toon-BasicOutline.shader" />
-     <None Include="Assets\MyAssets\Shaders\MafiaEmpire\ShadowReciver01.shader" />
+     <None Include="Assets\MyAssets\AdditionalScripts\Shaders\MafiaEmpire\ShadowReciver01.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\MobileBlur.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\SSAOShader.shader" />
      <None Include="Assets\Standard Assets\ParticleSystems\ParticleSystemsGuidelines.txt" />
@@ -150,7 +150,7 @@
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKGlowEffect\MKGlowFastBlur.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\ColorCorrectionSelective.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_DepthOfField\Bokeh34.shader" />
-     <None Include="Assets\MyAssets\Shaders\CrazyMonkeyIsland\ShadowReciver.shader" />
+     <None Include="Assets\MyAssets\AdditionalScripts\Shaders\CrazyMonkeyIsland\ShadowReciver.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\CameraMotionBlurDX11.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Transparent\MK_Transparent-DiffuseBumped.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\SeparableBlurPlus.shader" />
@@ -164,7 +164,7 @@
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Transparent\MK_Transparent-Parallax.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\NoiseAndGrainDX11.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BrightPassFilter2.shader" />
-     <None Include="Assets\MyAssets\Shaders\RatEmpire\ShadowReciver01.shader" />
+     <None Include="Assets\MyAssets\AdditionalScripts\Shaders\RatEmpire\ShadowReciver01.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_DepthOfField\SeparableBlur.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\MotionBlurClear.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\ColorCorrectionEffect.shader" />
@@ -186,18 +186,18 @@
      <None Include="Assets\Standard Assets\Characters\ThirdPersonCharacter\ThirdPersonCharacterGuidelines.txt" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\Tonemapper.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BrightPassFilter.shader" />
-     <None Include="Assets\MyAssets\Shaders\RatEmpire\ShadowReciver.shader" />
+     <None Include="Assets\MyAssets\AdditionalScripts\Shaders\RatEmpire\ShadowReciver.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_Antialiasing\FXAA2.shader" />
      <None Include="Assets\Plugins\SpriteMask\Resources\SpriteDefault.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Illumin\MK_Illumin-Diffuse.shader" />
      <None Include="Assets\Standard Assets\Cameras\CameraGuidelines.txt" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\ColorCorrection3DLut.shader" />
-     <None Include="Assets\MyAssets\Shaders\MafiaEmpire\ShadowReciver.shader" />
+     <None Include="Assets\MyAssets\AdditionalScripts\Shaders\MafiaEmpire\ShadowReciver.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Normal\MK_Normal-DiffuseRim.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\LensFlareCreate.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Illumin\MK_Illumin-ParallaxSpec.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\EdgeDetectNormals.shader" />
-     <None Include="Assets\MyAssets\Shaders\MafiaEmpire\VideoMasking.shader" />
+     <None Include="Assets\MyAssets\AdditionalScripts\Shaders\MafiaEmpire\VideoMasking.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\PrepareSunShaftsBlur.shader" />
      <None Include="Assets\Plugins\SpriteMask\Resources\SpriteDiffuse.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Transparent\MK_Transparent-Glossy.shader" />
@@ -205,10 +205,10 @@
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\Blend.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\BlendModesOverlay.shader" />
      <None Include="Assets\Standard Assets\Environment\Water\Water4\Shaders\WaterInclude.cginc" />
-     <None Include="Assets\MyAssets\Shaders\CrazyMonkeyIsland\ShadowReciver01.shader" />
+     <None Include="Assets\MyAssets\AdditionalScripts\Shaders\CrazyMonkeyIsland\ShadowReciver01.shader" />
      <None Include="Assets\Standard Assets\Environment\Water\Water4\Shaders\FXWater4Advanced.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKBase\Cutout\MK_Cutout-Diffuse.shader" />
-     <None Include="Assets\MyAssets\Shaders\CrazyMonkeyIsland\VideoMasking.shader" />
+     <None Include="Assets\MyAssets\AdditionalScripts\Shaders\CrazyMonkeyIsland\VideoMasking.shader" />
      <None Include="Assets\Standard Assets\Characters\RollerBall\RollerBallGuidelines.txt" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\SimpleClear.shader" />
      <None Include="Assets\Addons\_MK\_MKGlowSystem\_Shader\_MKGlowEffect\MKGlowRender.shader" />
@@ -247,10 +247,13 @@
  <HintPath>D:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
  </Reference>
  <Reference Include="TexturePackerImporter">
- <HintPath>G:/GitHub/CloneRepos/JackPhoneUnity3D/Unity3D/SlotMachine/Assets/codeandweb.com/Editor/TexturePackerImporter.dll</HintPath>
+ <HintPath>D:/GitHub/CloneRepos/JackPhoneUnity3D/Unity3D/SlotMachine/Assets/codeandweb.com/Editor/TexturePackerImporter.dll</HintPath>
  </Reference>
  <Reference Include="TexturePackerImporter">
- <HintPath>G:/GitHub/CloneRepos/JackPhoneUnity3D/Unity3D/SlotMachine/Assets/Editor/TexturePackerImporter.dll</HintPath>
+ <HintPath>D:/GitHub/CloneRepos/JackPhoneUnity3D/Unity3D/SlotMachine/Assets/Editor/TexturePackerImporter.dll</HintPath>
+ </Reference>
+ <Reference Include="System.Data">
+ <HintPath>D:/GitHub/CloneRepos/JackPhoneUnity3D/Unity3D/SlotMachine/Assets/Plugins/System.Data.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.Graphs">
  <HintPath>D:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.Graphs.dll</HintPath>
